--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2024"
-name = "libprefix"
+name = "libentropy"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,7 +9,8 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-entropy = { path = "../lib/entropy" }
+compress = { git = "https://github.com/neri/compress.git" }
+# compress = { path = "../../compress" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
